DEVEX-3887 fixed website

--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -27,7 +27,7 @@
   ></app-ieo-info>
 
   <app-ieo-community
-    *ngIf="false"
+    *ngIf="true"
     [community]="ieoData.community"
   ></app-ieo-community>
 
