--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.scss
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.scss
@@ -5,3 +5,15 @@
 .bottom-tooltip {
   position: absolute;
 }
+.modal__note{
+  left: -12px;
+  right: 0;
+}
+
+.currency-select-wrapper, .send__wrap-input{
+  margin-bottom: 33px;
+  &.one-time{
+    margin-bottom: 23px;
+  }
+}
+
