--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-three/freecoins-popup-step-three.component.scss
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-three/freecoins-popup-step-three.component.scss
@@ -2,4 +2,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 420px;
+  margin: 0 auto;
+}
+.refill__fiat-successful-icon {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 16px;
+}
+.refill__fiat-successful-title {
+  text-align: center;
+  margin-bottom: 16px;
+}
+.refill__fiat-successful-subtitle {
+  text-align: center;
+  margin-bottom: 16px;
+  .link {
+    text-decoration: underline;
+  }
+}
+
+.btn{
+  margin-top: 16px;
 }
