DEVEX-3887 fixed website links

--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -28,7 +28,7 @@
 
   <app-ieo-community
     *ngIf="true"
-    [community]="ieoData.community"
+    [IEOName]="IEOData.currencyName"
   ></app-ieo-community>
 
   <app-ieo-requirements
