--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -27,10 +27,7 @@
     [requirements]="requirements || {}"
   ></app-ieo-info>
 
-  <app-ieo-community
-    *ngIf="true"
-    [IEOName]="IEOData.currencyName"
-  ></app-ieo-community>
+  <app-ieo-community [IEOName]="IEOData.currencyName"></app-ieo-community>
 
   <app-ieo-requirements
     *ngIf="
