--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
@@ -2,3 +2,13 @@
   text-align: center;
   margin-bottom: 38px;
 }
+
+.bottom-tooltip {
+  position: absolute;
+}
+
+
+.currency-select-wrapper {
+  width: 100%;
+  margin-bottom: 35px;
+}
