--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-two/freecoins-popup-step-two.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-two/freecoins-popup-step-two.component.html
@@ -1,17 +1,35 @@
 <div class="modal__content qubera-content refil-s3">
   <div class="fiat-deposit-s1 fiat-withdraw-s1">
-    <h2 class="title refill__title">Two-factor Authentications</h2>
-    <h4 class="popup__subtitle popup_title--dm" [ngClass]="{'msg-error' : isError}">
+    <h2 class="title refill__title">{{'Two-factor Authentications' | translate}}</h2>
+    <h4
+      class="popup__subtitle popup_title--dm"
+      [ngClass]="{'msg-error' : isError}"
+    >
       {{twoFaTitle}}
     </h4>
 
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <form
+      [formGroup]="form"
+      (ngSubmit)="onSubmit()"
+    >
       <div class="input-block">
-        <input class="wrap-input__input" type="text" name="code" formControlName="code" required>
-        <label class="wrap-input__label" for="code">{{'Code' | translate}}</label>
+        <input
+          class="wrap-input__input"
+          type="text"
+          name="code"
+          formControlName="code"
+          required
+        >
+        <label
+          class="wrap-input__label"
+          for="code"
+        >{{'Code' | translate}}</label>
         <ng-container *ngIf="formPin.invalid && !formPin.untouched && !statusMessage">
           <div class="input-hint-wrapper">
-            <span class="wrap-input__message" *ngIf="formPin.invalid">
+            <span
+              class="wrap-input__message"
+              *ngIf="formPin.invalid"
+            >
               {{'Code field is required.' | translate}}
             </span>
           </div>
@@ -24,7 +42,11 @@
           </div>
         </ng-container>
       </div>
-      <button class="btn btn--center" type="submit" [disabled]="form.invalid">
+      <button
+        class="btn btn--center"
+        type="submit"
+        [disabled]="form.invalid"
+      >
         {{'Confirm' | translate}}
       </button>
     </form>
