--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
@@ -10,83 +10,18 @@
     <h3 class="subtitle send__subtitle">{{' the code will be sent to you after transaction verification ' | translate}}</h3>
     <form [formGroup]="form">
       <div class="send__inputs-wrap">
-        <div class="select send__select send__select--custom">
-          <div
-            class="select__value select__value--active"
-            (click)="currencyDropdownToggle()"
-          >
-            <div class="icon-wr">
-              <img
-                [src]="activeCrypto.name  | getIconUrl"
-                class="select__list-item-icon"
-              >
-            </div>
-            {{ activeCrypto.name }}
-          </div>
-          <div class="select__label">{{'Currency' | translate}}</div>
-          <div class="select__line"></div>
-          <div class="select__triangle"></div>
-          <!--add select__list-searching--open for looking open state-->
-          <div
-            class="select__list-searching"
-            [ngClass]="{'select__list-searching--open': openCurrencyDropdown}"
-            *ngIf="openCurrencyDropdown"
-          >
-            <div class="select__search">
-              <input
-                class="select__search-input"
-                type="text"
-                placeholder="Search"
-                (input)="searchCoin($event)"
-              >
-              <div class="select__search-icon">
-                <svg
-                  width="18"
-                  height="18"
-                  viewBox="0 0 18 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"
-                  />
-                </svg>
-              </div>
-            </div>
-            <div class="select__list-searching-body">
-
-              <perfect-scrollbar>
-                <ng-container *ngFor="let letter of alphabet">
-                  <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
-                  <div class="select__searching-items-wrap">
-                    <div
-                      class="select__searching-item"
-                      *ngFor="let name of cryptoNames | groupCoin:letter"
-                      (click)="selectCurrency(name)"
-                    >
-                      <div class="icon-wr">
-                        <img
-                          [src]="name.name | getIconUrl"
-                          class="select__list-item-icon"
-                        >
-                      </div>
-                      <span>{{name.name}}</span>
-                    </div>
-                  </div>
-                </ng-container>
-              </perfect-scrollbar>
-
-            </div>
-          </div>
+        <div class="currency-select-wrapper">
+          <app-currency-select-crypto
+            [activeCurrency]="activeCrypto"
+            [currencies]="cryptoNames"
+            (selectCurrency)="selectCurrency($event)"
+          ></app-currency-select-crypto>
         </div>
 
 
         <div
           class="wrap-input send__wrap-input"
-          [ngClass]="{'wrap-input--error': form.get('amount').invalid &&
-            (form.get('amount').touched || isSubmited)}"
+          [ngClass]="{'wrap-input--error': formAmount.invalid && (formAmount.touched || isSubmited)}"
         >
           <div class="avaliable">
             {{'Available:' | translate}}
@@ -95,39 +30,38 @@
               class="link"
               [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}"
             >
-              {{activeBalance | number:'1.1-8' | replaceNumber}} {{activeCrypto ? activeCrypto.name : ''}}
+              {{activeBalance | currencyFormat}} {{activeCrypto.name}}
             </a>
           </div>
           <app-price-input
-            [placeholder]="(activeCrypto ? activeCrypto.name : '') + ' Amount'"
+            [placeholder]="activeCrypto.name + ' Amount'"
             [currencyName]="activeCrypto.name"
             (customBlur)="amountBlur($event)"
-            (customInput)="amountInput($event)"
             name="amount"
             formControlName="amount"
           >
-
           </app-price-input>
-          <span class=" wrap-input__message--show">
-            {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
+
+          <span class="bottom-tooltip wrap-input__message--show">
+            {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}
           </span>
 
           <!--Input error section starts-->
-          <div *ngIf="form.get('amount').errors != null">
+          <div *ngIf="formAmount.errors">
             <div class="input-hint-wrapper">
               <span
                 class=" wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-                [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] &&
-               (form.controls['amount'].touched || isSubmited)}"
+                *ngIf="formAmount.errors['isMinThenMinWithdraw']"
+                [ngClass]="{'wrap-input__message': formAmount.errors['isMinThenMinWithdraw'] &&
+                  (formAmount.touched || isSubmited)}"
               >
-                {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
+                {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}</span>
               <span
                 class="wrap-input__message wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] &&
-                 (form.controls['amount'].touched || isSubmited)"
+                *ngIf="formAmount.errors['isMaxThenActiveBalance'] &&
+                  (formAmount.touched || isSubmited)"
               >
-                {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
+                {{'Max sum for transfer' | translate}} {{activeBalance}} {{activeCrypto.name}}</span>
             </div>
           </div>
           <!--Input error section ends-->
@@ -140,27 +74,28 @@
     <div class="send__info">
       <div class="send__info-row">
         <div class="send__info-title">{{'You want to transfer:' | translate}}</div>
-        <div class="send__info-value">{{responseCommission.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
+        <div class="send__info-value">{{responseCommission.amount | currencyFormat}} {{activeCrypto.name}}</div>
       </div>
       <div class="send__info-row">
         <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
-        <div class="send__info-value">{{responseCommission.companyCommissionRate}} =
-          {{responseCommission.totalCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}
+        <div class="send__info-value">{{responseCommission.companyCommissionRate | currencyFormat}} =
+          {{responseCommission.totalCommissionAmount | currencyFormat}} {{activeCrypto.name}}
         </div>
       </div>
       <div class="send__info-row">
         <div class="send__info-title">{{'Total with comission:' | translate}}</div>
-        <div class="send__info-value">{{responseCommission.resultAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
+        <div class="send__info-value">{{responseCommission.resultAmount | currencyFormat}} {{activeCrypto.name}}</div>
       </div>
     </div>
     <button
       class="btn btn--center"
-      [disabled]="!form.valid"
+      [disabled]="form.invalid"
       (click)="submitTransfer()"
     >
       {{'Create code' | translate}}
     </button>
     <div class="send__line"></div>
+
     <div class="note modal__note">
       <div class="note__title">{{'Please note:' | translate}}</div>
       <ul class="note__list">
@@ -170,6 +105,7 @@
         <li class="note__list-item">{{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.</li>
       </ul>
     </div>
+
   </div>
 </div>
 
