DEVEX-3871 fixed transfer email code

--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -140,9 +140,9 @@
       <div class="note__title">{{'Please note:' | translate}}</div>
       <ul class="note__list">
         <li class="note__list-item">
-          {{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
+          {{'Once you have submitted your transfer request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
         </li>
-        <li class="note__list-item">{{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.</li>
+        <li class="note__list-item">{{'After making a transfer, you can track its progress in history on funds page' | translate}}.</li>
       </ul>
     </div>
 
