--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.scss
@@ -7,3 +7,14 @@
 	margin-bottom: 34px;
 	    font-size: 17px;
 }
+
+
+.bottom-tooltip {
+  position: absolute;
+}
+
+
+.currency-select-wrapper {
+  width: 100%;
+  margin-bottom: 35px;
+}
