--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -14,77 +14,18 @@
         class="send__inputs-wrap"
         *ngIf="!!cryptoInfoByName"
       >
-        <div class="select send__select">
-          <div
-            class="select__value select__value--active"
-            (click)="currencyDropdownToggle()"
-          >
-            <img
-              [src]=" activeCrypto.name | getIconUrl"
-              class="select__list-item-icon"
-            >
-            {{activeCrypto.name }}
-          </div>
-          <div class="select__label">{{'Currency' | translate}}</div>
-          <div class="select__line"></div>
-          <div class="select__triangle"></div>
-          <!--add select__list-searching--open for looking open state-->
-          <div
-            class="select__list-searching"
-            [ngClass]="{'select__list-searching--open': openCurrencyDropdown}"
-            *ngIf="openCurrencyDropdown"
-          >
-            <div class="select__search">
-              <input
-                class="select__search-input"
-                type="text"
-                placeholder="Search"
-                (input)="searchCoin($event)"
-              >
-              <div class="select__search-icon">
-                <svg
-                  width="18"
-                  height="18"
-                  viewBox="0 0 18 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"
-                  />
-                </svg>
-              </div>
-            </div>
-            <div class="select__list-searching-body">
 
-              <perfect-scrollbar>
-                <ng-container *ngFor="let letter of alphabet">
-                  <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
-                  <div class="select__searching-items-wrap">
-                    <div
-                      class="select__searching-item"
-                      *ngFor="let name of cryptoNames | groupCoin:letter"
-                      (click)="selectCurrency(name)"
-                    >
-                      <img
-                        [src]="name.name | getIconUrl"
-                        class="select__list-item-icon"
-                      >
-                      <span>{{name.name}}</span>
-                    </div>
-                  </div>
-                </ng-container>
-              </perfect-scrollbar>
-
-            </div>
-          </div>
+        <div class="currency-select-wrapper">
+          <app-currency-select-crypto
+            [activeCurrency]="activeCrypto"
+            [currencies]="cryptoNames"
+            (selectCurrency)="selectCurrency($event)"
+          ></app-currency-select-crypto>
         </div>
 
         <div
           class="wrap-input send__wrap-input"
-          *ngIf="cryptoInfoByName && !cryptoInfoByName.merchantCurrencyData.length"
+          *ngIf="!isMerchantData"
         >
           <div class="withdrawal__closed-error">
             {{'Sorry, withdrawal is closed for current moment!' | translate}}
@@ -93,9 +34,8 @@
 
         <div
           class="wrap-input send__wrap-input"
-          [ngClass]="{
-                'wrap-input--error': form.get('amount').invalid&& (form.get('amount').touched || isSubmited),
-                'd-none': !(cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length)}"
+          *ngIf="isMerchantData"
+          [ngClass]="{'wrap-input--error': formAmount.invalid&& (formAmount.touched || isSubmited)}"
         >
 
           <div class="daily-avaliable">{{'24h limit:' | translate}}
@@ -119,7 +59,6 @@
           <app-price-input
             [placeholder]="'Amount'"
             [currencyName]="activeCrypto.name"
-            (customInput)="amountInput($event)"
             (customBlur)="amountBlur($event)"
             name="amount"
             formControlName="amount"
@@ -137,13 +76,11 @@
           </span>
 
           <!--Input error section starts-->
-          <div *ngIf="form.get('amount').errors != null">
+          <div *ngIf="formAmount.errors != null">
             <div class="input-hint-wrapper">
               <span
-                class=" wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-                [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] &&
-                                                  (form.controls['amount'].touched || isSubmited)}"
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formAmount.errors['isMinThenMinWithdraw'] &&  (formAmount.touched || isSubmited)"
               >
                 {{
                   'Minimum sum for withdrawal' | translate
@@ -155,7 +92,7 @@
               </span>
               <span
                 class="wrap-input__message wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && (form.controls['amount'].touched || isSubmited)"
+                *ngIf="formAmount.errors['isMaxThenActiveBalance'] && (formAmount.touched || isSubmited)"
               >
                 {{
                   'Your available balance:' | translate
@@ -167,7 +104,7 @@
               </span>
               <span
                 class="wrap-input__message wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMaxThenDailyLimit'] && (form.controls['amount'].touched || isSubmited)"
+                *ngIf="formAmount.errors['isMaxThenDailyLimit'] && (formAmount.touched || isSubmited)"
               >
                 {{
                   'Your 24h limit to withdrawal:' | translate
@@ -188,9 +125,8 @@
 
         <div
           class="wrap-input  send__wrap-input"
-          *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length"
-          [ngClass]="{'wrap-input--error': !form.controls['address'].valid &&
-                        (form.controls['address'].touched || isSubmited)}"
+          *ngIf="isMerchantData"
+          [ngClass]="{'wrap-input--error': formAddress.invalid && (formAddress.touched || isSubmited)}"
         >
           <input
             class="wrap-input__input"
@@ -203,7 +139,7 @@
           <!--Input error section starts-->
           <div
             class="input-hint-wrapper"
-            *ngIf="!form.controls['address'].valid && (form.controls['address'].touched || isSubmited)"
+            *ngIf="formAddress.invalid && (formAddress.touched || isSubmited)"
           >
             <span class="wrap-input__message wrap-input__message--show">
               {{'You should enter' | translate}} {{currName}} {{'address for withdrawal' | translate}}
@@ -214,11 +150,8 @@
 
         <div
           class="wrap-input send__wrap-input"
-          *ngIf="isMemo
-                    && cryptoInfoByName
-                    && cryptoInfoByName.merchantCurrencyData.length"
-          [ngClass]="{'wrap-input--error': !form.controls['memo'].valid
-                          && (form.controls['memo'].touched || isSubmited)}"
+          *ngIf="isMemo && isMerchantData"
+          [ngClass]="{'wrap-input--error': formMemo.invalid && (formMemo.touched || isSubmited)}"
         >
           <input
             class="wrap-input__input"
@@ -230,7 +163,7 @@
           <!--Input error section starts-->
           <span
             class="wrap-input__message wrap-input__message--show"
-            *ngIf="!form.controls['memo'].valid && (form.controls['memo'].touched || isSubmited)"
+            *ngIf="formMemo.invalid && (formMemo.touched || isSubmited)"
           >
             <div class="input-hint-wrapper">
               {{'Enter memo ID' | translate}}
@@ -241,57 +174,59 @@
       </div>
     </form>
 
-    <div class="send__line"></div>
+    <ng-container *ngIf="isMerchantData">
+      <div class="send__line"></div>
 
-    <ng-container *ngIf="cryptoInfoByName.leftRequestSum > 0">
-      <div class="send__info">
-        <div class="send__info-row">
-          <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
-          <div class="send__info-value">
-            {{calculateData.amount | currencyFormat}} {{currName}}
+      <ng-container *ngIf="cryptoInfoByName.leftRequestSum > 0">
+        <div class="send__info">
+          <div class="send__info-row">
+            <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
+            <div class="send__info-value">
+              {{calculateData.amount | currencyFormat}} {{currName}}
+            </div>
+          </div>
+          <div class="send__info-row">
+            <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
+            <div class="send__info-value">{{calculateData.companyCommissionRate | currencyFormat}}
+              = {{calculateData.companyCommissionAmount | currencyFormat}} {{currName}}
+            </div>
+          </div>
+          <div class="send__info-row">
+            <div class="send__info-title">{{'Merchant comission:' | translate}}</div>
+            <div class="send__info-value">{{calculateData.merchantCommissionRate | currencyFormat}} =
+              {{calculateData.merchantCommissionAmount | currencyFormat}} {{currName}}
+            </div>
+          </div>
+          <div class="send__info-row">
+            <div class="send__info-title">{{'Total comission:' | translate}}</div>
+            <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount | currencyFormat}}
+              {{currName}}
+            </div>
+          </div>
+          <div class="send__info-row">
+            <div class="send__info-title">{{'Total with comission:' | translate}}</div>
+            <div class="send__info-value">{{calculateData.resultAmount | currencyFormat}} {{currName}}</div>
           </div>
         </div>
-        <div class="send__info-row">
-          <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
-          <div class="send__info-value">{{calculateData.companyCommissionRate}}
-            = {{calculateData.companyCommissionAmount}}
-            {{currName}}
-          </div>
+
+        <button
+          class="btn btn--center"
+          [disabled]="form.invalid"
+          (click)="onSubmitWithdrawal()"
+        >{{'Withdraw' | translate}}
+          <span class="value">{{calculateData.resultAmount | currencyFormat}}</span>
+          <span> {{currName}}</span>
+        </button>
+
+      </ng-container>
+      <ng-container *ngIf="cryptoInfoByName.leftRequestSum == 0">
+        <div class="withdraw-limit-error">
+          {{'Your daily output limit for this currency has been exceeded. Please try again tomorrow.' | translate}}
         </div>
-        <div class="send__info-row">
-          <div class="send__info-title">{{'Merchant comission:' | translate}}</div>
-          <div class="send__info-value">{{calculateData.merchantCommissionRate}} =
-            {{calculateData.merchantCommissionAmount}} {{currName}}
-          </div>
-        </div>
-        <div class="send__info-row">
-          <div class="send__info-title">{{'Total comission:' | translate}}</div>
-          <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
-            {{currName}}
-          </div>
-        </div>
-        <div class="send__info-row">
-          <div class="send__info-title">{{'Total with comission:' | translate}}</div>
-          <div class="send__info-value">{{calculateData.resultAmount }} {{currName}}</div>
-        </div>
-      </div>
-      <button
-        class="btn btn--center"
-        [disabled]="!form.valid"
-        (click)="onSubmitWithdrawal()"
-      >{{'Withdraw' | translate}}
-        <span class="value">{{calculateData.resultAmount}}</span>
-        <span> {{currName}}</span>
-      </button>
+      </ng-container>
+
+      <div class="send__line"></div>
     </ng-container>
-    <ng-container *ngIf="cryptoInfoByName.leftRequestSum == 0">
-      <div class="withdraw-limit-error">
-        {{'Your daily output limit for this currency has been exceeded. Please try again tomorrow.' | translate}}
-      </div>
-    </ng-container>
-
-    <div class="send__line"></div>
-
     <div class="note modal__note">
       <div class="note__title">{{'Please note:' | translate}}</div>
       <ul class="note__list">
