--- a/src/assets/scss/components/_side-popups.scss
+++ b/src/assets/scss/components/_side-popups.scss
@@ -93,7 +93,7 @@
 
   .send__inputs-wrap, .refill__inputs-wrap {
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: 24px;
   }
