DEVEX-3917 added policy components

--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -73,6 +73,7 @@
 
   <app-popup-policy
     *ngIf="showPolicy"
+    [IEOName]="IEOData.currencyName"
     (close)="togglePolicy(false)"
     (agree)="agreeWithPolicy()"
   ></app-popup-policy>
