--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -75,6 +75,7 @@
 
   <app-popup-policy
     *ngIf="showPolicy"
+    [IEOName]="IEOData.currencyName"
     (close)="togglePolicy(false)"
     (agree)="agreeWithPolicy()"
   ></app-popup-policy>
