DEVEX-3917 added text

--- a/src/app/ieo/components/popup-policy/dom-policy/dom-policy.component.html
+++ b/src/app/ieo/components/popup-policy/dom-policy/dom-policy.component.html
@@ -1,3 +1,144 @@
 <h6 class="popup__title tnx-head">Agreement of Token Purchase on X-Platform</h6>
 <p class="popup__subtitle tnx-description">
+    !This Agreement of Token Purchase on X-Platform ("Agreement") between you and Exrates.me governs your participating in purchase of any token ("token") from its token issuer via X-Platform - a service provided by Exrates.me. In this Agreement, "You" and "your" refers to you, the purchaser of the Token; “We”and”us” refer to Exrates.me, the X-Platform service provider.
+    <br>
+    <br>Each time you purchase any token, you represent and assure Exrates.me that
+    <br>i) you are an eligible purchaser of the token;
+    <br>ii) have read and agree to the terms and conditions of this Agreement and any token purchase instructions and token sale information ;
+    <br>iii) you acknowledge, agree and understand token purchase is between you and its token issuer, where Exrates.me X-Platform only provide a place to facilitate your access to sale of token;
+    <br>iv) you are not participating in the token sale for any investment, speculative or other financial purposes.
+    <br>
+    <br>I Eligibility
+    <br>i) you are at least 18 years of age and have the full capacity and authority to accept the Agreement.
+    <br>ii) your participation of Token Purchase does not constitute a breach of any applicable laws;
+    <br>iii) You are not a person of any sanctions list or equivalent maintained by the United States, the United Kingdom government or the European Union;
+    <br>iv) You are not located in, or a citizen or resident of any restricted locations for the token purchase.
+    <br>Restricted Locations
+    <br>Japan, the USA, Canada, Cuba, Iran, North Korea, Sudan, Syria,Pakistan, the Government of Venezuela, Crimea or any other country to which the United States, the United Kingdom or the European Union embargoes goods or imposes similar sanctions.
+    <br>
+    <br>II Token Purchase on X-Platform
+    <br>1.Verifying Account
+    <br>You should create a Exrates.me account and verify your account to satisfy Exrates.me identity verification acquirement.
+    <br>
+    <br>2.Funding Account
+    <br>In order to participate in sale of token on X-Platform, you must deposit a certain amount of specified cryptocurrency or cryptocurrencies in your Exrates.me account or convert other coins to that coin(coins).
+    <br>
+    <br>The funds in your Exrates.me account should be your own and without dispute over the ownership and the funds should derive from a legitimate source.
+    <br>
+    <br>3.Purchase of Token
+    <br>The token purchase is between you and its token issuer.
+    <br>
+    <br>During order placing time for a certain token, you may place an order to purchase the token. The order should be made as per the instruction of such order for the token on X-Platform.
+    <br>
+    <br>Your acknowledge that order placed for the purchase of any token on X-Platform is final and you may not cancel it. You acknowledge and agree that your order may not fill or only partially fill due to unsuccessful token sale, limited token amount or unexpected technical issues during the sale.
+    <br>
+    <br>4.Unsuccessful Token Sale
+    <br>A token sale is not regarded as successful unless preset targets are reached or other preset successful criteria are met. You acknowledge and agree your order will be canceled by Exrates.me when token sale is unsuccessful. Except for a release of fund occupied by your order to your available balance, you waive any and all claims against the token issuer and Exrates.me for any loss or damages in connection with unsuccessful token sale.
+    <br>
+    <br>5.Token Delivery and Trading and Withdrawal
+    <br>The purchased token will not be delivered until the delivery date. Withdrawal or trading of the token will only be available until specified date and time for the token. Exrates.me and the token issuer will not be liable to you for any losses from your inability to transfer, withdraw or trade token during such period. You acknowledge the valuation and exchange rate of token may fluctuate dramatically all the time and the rate after token delivery from the Issuer may differ significantly from the sale price on X-Platform.
+    <br>
+    <br>6.Fees
+    <br>You agree to pay Exrates.me any applicable fees for purchase of token on X-Platform and authorize Exrates.me to deduct such fees from your Exrates.me account directly.
+    <br>
+    <br>7.Conditions and Restrictions
+    <br>Exrates.me may, without prior notice to you, at any time and in its sole discretion, refuse any transfer request, order or other request submitted by you or impose any other conditions or restrictions upon your use of the X-Platform service. For example, Exrates.me may:(i) restrict transaction requests from certain locations; (ii) restrict withdrawals or trading if there is a reasonable suspicion of fraud, diminished capacity or any inappropriate activity.
+    <br>
+    <br>III No Broker or Fiduciary Relationship
+    <br>Exrates.me is not your broker, agent or adviser and has no fiduciary duty to you in connection with any purchase activities or other decision in relating to token sales on X-Platform. Supporting any token sale on X-Platform does not indicate approval or disapproval of the token or the token issuer and should not be used as a substitute for your own understanding of the risks specific to the token and the token issuer.
+    <br>
+    <br>You acknowledge and agree that none of the X-Platform service amount to investment advice or any marketing, promotion or offer of any Token or investment to you. You are solely responsible for any losses, damages or costs resulting from your reliance on any data or information that Exrates.me may provide in connection with your use of the services.
+    <br>
+    <br>IV Modification, Suspension or Termination
+    <br>Exrates.me may, at its discretion and without liability to you, with or without prior notice and at any time, modify or suspend or terminate all or any portion of any service provided in relating to token sale on X-Platform.
+    <br>
+    <br>V No Liability
+    <br>Exrates.me will not be liable for any losses suffered by you resulting from any modification of any services, in connection with the token sale on X-Platform, or from any suspension or termination of your access to all or a portion of any services in connection with the Token sale.
+    <br>
+    <br>VI Disclaimer
+    <br>To the maximum extent permitted under applicable Law, Tokens or other item made available by Exrates.me are provided on an “as is” and “as available” basis without any warranties or representations of any kind. Exrates.me expressly disclaims, and you waive, any and all warranties of any kind in relating to the Token on X-Platform, whether express or implied, including but not limited to, any implied warranties of merchantability, fitness for a particular purpose, title or non-infringement or warranties arising from course of performance, course of dealing or usage in trade. Exrates.me does not represent or warrant that the service, Tokens and data are accurate, complete, reliable, current or error-free, or free of harmful components.
+    <br>
+    <br>VII Risk Disclosure
+    <br>Participating in the Token sale on X-Platform involves significant risks and potential financial losses, including but not limited to the following:
+    <br>
+    <br>1.The token projects are still at very early stage. There may be significant risks in relating to their business operating, legislative or regulatory environment, and many other factors.
+    <br>2.The Token and its underlying technology may be vulnerable to attacks on the security, integrity or operation of the Token or its underlying technology.
+    <br>3.The Token may be canceled, lost or double spent, or otherwise lose all or most of their value, due to forks, rollbacks, Attacks, changes to Token properties or failure of the Token to operate as intended.
+    <br>4.The Token may decrease in value or lose all of its value due to legislative or regulatory activity, or other government action.
+    <br>5.The Token you purchased may decrease or increase in values dramatically due to technical, regulatory, market and other factors.
+    <br>6.Understanding token may need advanced technical and financial knowledge in order to appreciate inherent risks.
+    <br>7.You may not be able to withdraw all or any portion of your purchased tokens timely due to issues of the token’s underlying technology or technical issues on Exrates.me exchange.
+    <br>8.Unauthorized third parties may access or use your Exrates.me Account and effect transactions without your knowledge or authorization.
+    <br>
+    <br>VIII Representations and Warranties
+    <br>You hereby represent and warrant that:
+    <br>You have read and understood all the terms and fully understand all the risks in relating to token sale on X-Platform and are willing to assume all the liabilities and losses.
+    <br>
+    <br>You have sufficient understanding of the project and its token on X-Platform and make informed decision after performing your own due diligence.
+    <br>
+    <br>You understand token do not confer any rights of any kind with respect to Exrates.me or its issuer, including but not limited to, any voting, distribution, redemption, liquidation or other financial or legal rights.
+    <br>
+    <br>By purchasing any token on X-Platform, you are certifying to Exrates.me that the activities in connection with the token purchase will comply with this Agreement and all applicable laws, rules and regulations. The Token you receive will not be used in any forms of illegal activity, including but not limited to participating in or supporting any illegal activities.
+    <br>
+    <br>IX Updates to Terms and Conditions
+    <br>Exrates.me may update these terms and conditions of this Agreement at any time. We recommend that you check these terms and conditions periodically for changes.
+    <br>
+    <br>
+    <br>X-Platform Link: https://exrates.me/ieo
+    <br>
+    <br>1.Introduction to Diamond Open Market
+    <br>
+    <br>The Diamond Open Market is EOS-based platform for everybody to buy and sell natural and lab-grown diamonds. DOM will present a marketplace for business and individuals working as a reliable tool for B2B or P2P relations. The platform will gather individual diamond holders, buyers, cutters, jewelers, as well as everybody involved in the gemstone business to agree on the prices and build a transparent and fair diamond market, offering a variety of payment methods, including cryptocurrency transfers.
+    <br>
+    <br>Click here to check out more: https://exrates.me/ieo/2
+    <br>
+    <br>1.Diamond Open Market Project Overview (for more detailed information, please visit Diamond Open Market official website https://debourse.com)
+    <br>(1) Token Symbol: DOM
+    <br>(2) Total Supply: 6,000,000,000
+    <br>(3) Initial Circ. Supply: 6.0%
+    <br>(4) Token Price 
+    <br>Private Sale: 1 DOM=0.0040 USDT
+    <br>(5) X-Platform Goal: 1,500,000 USDT
+    <br>(6) X-Platform Total Supply: 5.0%
+    <br>(7) Price (USDT): 1 DOM = 0.005 USDT; Price (BTC/ETH): To be confirmed
+    <br>Please note that the market price of BTC/ETH will vary. Therefore, the Price of BTC/ETH in related to the  X-Platform projects will be calculated within 3 hours prior to the sale. The calculation rule is as following: A specific time stamp within 3 hours before the start of sale will be randomly chosen. Then, a 72 hours average value of BTC/ETH-USDT on Exrates.me before the chosen time stamp would be calculated and referenced as the X-Platform Price.
+    <br>(8)Token Lock-up and Release：
+    <br>-X-Platform(5.0%):
+    <br>Lock-up period: none 
+    <br>Private Sale (10.0%): 10% of tokens unlocked after the IEO and the remaining 90% of tokens will be unlocked evenly every 3 months for the period of one year.
+    <br>Foundation (25.0%): 100% locked for one year, after which they will be unlocked by 20% every 2 months.
+    <br>Team (20.0%): 100% locked for one year, after which they will be unlocked by 20% every 2 months.
+    <br>Ecosystem(40.0%): 20% of tokens will be unlocked in 3 month after exchange listing, 80% of the remaining tokens will be unlocked every 6 month evenly.
+    <br>
+    <br>2. Diamond Open Market (DOM) X-Platform Sale Rules
+    <br>
+    <br>(1) Start Time: September 11, 14:00, UTC+8, 2019
+    <br>(2) The price and the number of orders of X-Platform Sale will be set 3 hours prior to the sale, based on the market price of BTC/ETH/USDT within the 3-hour period. Users can place one or a few orders according to the individual purchase limit.
+    <br>(3) Purchase limit: 10-5000 USDT.
+    <br>(4) End Time: When Hard Cap is reached or at October 11, 14:00, UTC+8, 2019
+    <br>(5) Token Distribution: Within 10 days after the token sale ends
+    <br>
+    <br>4. Attention:
+    <br>(1) Countries not supported: Afghanistan, Albania, Belarus, Bosnia and Herzegovina, Burundi, Burma, Canada, China, Democratic Republic of Congo, Cuba, Ethiopia, Guinea-Bissau, Guinea, Iran, Iraq, Japan, Liberia, Lebanon, Libya, Macedonia, Malaysia, New Zealand, Serbia, Sri Lanka, Sudan, Somalia, Syria, Thailand, Trinidad and Tobago, Tunisia, Uganda, United States of America, Venezuela, Yemen, Zimbabwe.
+    <br>For users from other countries, please check and make sure your participation in token sale on X-Platform complies with local laws and regulations.
+    <br>
+    <br>(2) Risk Warning:
+    <br>- The X-Platform project is still in its initial stage, factors including the operation and underlying technology of the project, and other related regulatory activities might contribute significant risks.
+    <br>- Advanced technical and financial knowledge is required to understand and uate the inherent risks of crypto-asset investment.
+    <br>- The volatility of market is high, and the price of token might fluctuate drastically due to technical, regulatory and marketing factors etc.
+    <br>- Users may not be able to withdraw all the purchased tokens due to technical issues of the project or Exrates.me.
+    <br>
+    <br>(3) Requirements for participants
+    <br>- Participant should register on Exrates.me and Log in;
+    <br>- After logging in, complete user identity verification;
+    <br>- Deposit a certain amount of cryptocurrencies in Exrates.me account;
+    <br>- Sign the Purchase Agreement on X-Platform before placing orders.
+    <br>
+    <br>
+    <br>We sincerely appreciate your continuous support. Stay tuned for more innovative products from Exrates.me!
+    <br>
+    <br>Exrates.me
+    <br>September 2, 2019
+    
+    
 </p>
