--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -116,3 +116,6 @@
 @import "pages/_freecoins.scss";
 //center popups
 @import "pages/_center-popups.scss";
+
+ //home page
+ @import "pages/_home-page.scss";
