--- a/src/app/ieo/components/popup-policy/dom-policy/dom-policy.component.html
+++ b/src/app/ieo/components/popup-policy/dom-policy/dom-policy.component.html
@@ -14,7 +14,8 @@
     <br>iii) You are not a person of any sanctions list or equivalent maintained by the United States, the United Kingdom government or the European Union;
     <br>iv) You are not located in, or a citizen or resident of any restricted locations for the token purchase.
     <br>Restricted Locations
-    <br>Japan, the USA, Canada, Cuba, Iran, North Korea, Sudan, Syria,Pakistan, the Government of Venezuela, Crimea or any other country to which the United States, the United Kingdom or the European Union embargoes goods or imposes similar sanctions.
+    <br>Afghanistan, Albania, Belarus, Bosniaand Herzegovina, Burundi, Burma, Canada, China, Democratic Republic of Congo, Cuba, Ethiopia, Guinea-Bissau, Guinea, Iran, Iraq, Japan, North Korea, Liberia, Lebanon, Libya, Macedonia, Malaysia, New Zealand, Serbia, Sri Lanka, Sudan, Somalia, Syria, Thailand, Trinidad and Tobago, Tunisia, Uganda, United States of America, Venezuela, Yemen, Zimbabwe.
+    <br>For users from other countries, please check and make sure your participation in token sale on X-Platform complies with local laws and regulations.
     <br>
     <br>II Token Purchase on X-Platform
     <br>1.Verifying Account
