DEVEX-3917 fixed countries

--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -36,6 +36,7 @@
     "
     [isAuthenticated]="isAuthenticated"
     [requirements]="requirements"
+    [IEOName]="IEOData.currencyName"
     (showPolicy)="togglePolicy(true)"
   ></app-ieo-requirements>
 
