--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -146,6 +146,20 @@
       <div class="bottom-social-wr">
         <div class="bottom-social-item">
           <a
+            href="https://coinspace.com"
+            class="coinspace"
+            target="_blank"
+            title="Facebook"
+            rel="nofollow noopener noreferrer"
+          >
+            <img
+              src="https://coinpricetoday.com/files/2019/08/icon.png"
+              alt="https://coinspace.com"
+            />
+          </a>
+        </div>
+        <div class="bottom-social-item">
+          <a
             href="https://www.tradingview.com/u/ExratesAnalytics/"
             target="_blank"
             title="TradingView"
